# swc-plugin-transform-module-specifiers

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
src/: config.rs  lib.rs  test.rs  tests.rs  visitor.rs
tests/: README.md  tsconfig.base.json
tests/ts_only/: .swcrc  package.json
tests/ts_only/src/: app.ts  renderer.ts
tests/ts_only/src/components/: index.ts  input.ts  select.ts  table.ts
