[package]
name = "swc_plugin_transform_module_specifiers"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = false # ref: https://github.com/swc-project/swc/issues/7479

[dependencies]
serde_json = "1.0.115"
swc_core = { version = "0.90.*", features = [
    "ecma_plugin_transform",
    "ecma_parser",
] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
